Add MobDebug attach debugger

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,9 @@
                     icon="AllIcons.Toolwindows.WebToolWindow"
                     anchor="right"
                     factoryClass="com.aridclown.intellij.defold.ui.DefoldToolWindowFactory"/>
+
+        <configurationType implementation="com.aridclown.intellij.defold.debugger.DefoldMobDebugConfigurationType"/>
+        <programRunner implementation="com.aridclown.intellij.defold.debugger.DefoldMobDebugProgramRunner"/>
     </extensions>
 
     <actions>
