feat: refactor Defold debugging support to enhance expression evaluation and local variable tracking

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,6 +32,8 @@
         <configurationType implementation="com.aridclown.intellij.defold.debugger.DefoldMobDebugConfigurationType"/>
         <programRunner implementation="com.aridclown.intellij.defold.debugger.DefoldMobDebugProgramRunner"/>
         <xdebugger.breakpointType implementation="com.aridclown.intellij.defold.debugger.DefoldScriptBreakpointType"/>
+        <completion.contributor language="Lua"
+                                implementationClass="com.aridclown.intellij.defold.debugger.MobDebugCompletionContributor"/>
     </extensions>
 
     <actions>
