--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,6 +18,7 @@
         <postStartupActivity implementation="com.aridclown.intellij.defold.DefoldProjectActivity"/>
         <additionalLibraryRootsProvider implementation="com.aridclown.intellij.defold.DefoldStdLibraryProvider"/>
         <fileIconProvider implementation="com.aridclown.intellij.defold.DefoldFileIconProvider"/>
+        <projectOpenProcessor implementation="com.aridclown.intellij.defold.DefoldProjectOpenProcessor"/>
 
         <!-- Notification group for Defold notifications -->
         <notificationGroup id="Defold" displayType="BALLOON"/>
