--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
     <!--    <depends>com.redhat.devtools.lsp4ij</depends>-->
 
     <extensions defaultExtensionNs="com.intellij">
-        <!-- Start detection after project is opened -->
+        <!-- Start detection after the project is opened -->
         <postStartupActivity implementation="com.aridclown.intellij.defold.DefoldProjectActivity"/>
         <additionalLibraryRootsProvider implementation="com.aridclown.intellij.defold.DefoldStdLibraryProvider"/>
         <fileIconProvider implementation="com.aridclown.intellij.defold.ui.DefoldFileIconProvider"/>
@@ -55,7 +55,7 @@
         </action>
 
         <group id="Defold.HotReloadGroup">
-            <add-to-group group-id="FileMenu" relative-to-action="PrintExportGroup" anchor="after"/>
+            <add-to-group group-id="FileMenu" relative-to-action="Synchronize" anchor="after"/>
 
             <separator/>
             <action id="Defold.HotReload"
@@ -63,8 +63,24 @@
                     icon="AllIcons.Actions.Refresh"
                     text="Hot Reload"
                     description="Reload modified resources in running Defold game">
-                <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt R" />
+                <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt R"/>
             </action>
+        </group>
+
+        <group id="Defold.BuildMenu" popup="true" text="Project" description="Defold project actions">
+            <action id="BuildDefoldProject"
+                    text="Build"
+                    class="com.aridclown.intellij.defold.actions.DefoldBuildProjectAction">
+                <keyboard-shortcut keymap="$default" first-keystroke="alt B" replace-all="true"/>
+            </action>
+            <action id="CleanBuildDefoldProject"
+                    text="Clean Build"
+                    class="com.aridclown.intellij.defold.actions.DefoldRebuildProjectAction">
+                <keyboard-shortcut keymap="$default" first-keystroke="alt shift B" replace-all="true"/>
+            </action>
+            <reference ref="Synchronize"/>
+
+            <add-to-group group-id="MainMenu" anchor="after" relative-to-action="ViewMenu"/>
         </group>
     </actions>
 </idea-plugin>
