--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <!-- Start detection after the project is opened -->
         <postStartupActivity implementation="com.aridclown.intellij.defold.DefoldProjectActivity"/>
-        <fileIconProvider implementation="com.aridclown.intellij.defold.ui.DefoldFileIconProvider"/>
+        <fileIconProvider implementation="com.aridclown.intellij.defold.util.DefoldFileIconProvider"/>
         <projectOpenProcessor implementation="com.aridclown.intellij.defold.DefoldProjectOpenProcessor"/>
         <fileTemplateGroup
                 implementation="com.aridclown.intellij.defold.templates.DefoldFileTemplateGroupDescriptorFactory"/>
@@ -28,13 +28,13 @@
 
         <!-- debugger -->
         <configurationType implementation="com.aridclown.intellij.defold.debugger.DefoldMobDebugConfigurationType"/>
-        <programRunner implementation="com.aridclown.intellij.defold.debugger.DefoldProjectDebugProgramRunner"/>
-        <programRunner implementation="com.aridclown.intellij.defold.debugger.DefoldProjectRunProgramRunner"/>
+        <programRunner implementation="com.aridclown.intellij.defold.debugger.ProjectDebugProgramRunner"/>
+        <programRunner implementation="com.aridclown.intellij.defold.debugger.ProjectRunProgramRunner"/>
         <xdebugger.breakpointType implementation="com.aridclown.intellij.defold.debugger.DefoldScriptBreakpointType"/>
         <completion.contributor language="Lua"
                                 implementationClass="com.aridclown.intellij.defold.debugger.MobDebugCompletionContributor"/>
         <runConfigurationProducer
-                implementation="com.aridclown.intellij.defold.debugger.DefoldMobDebugConfigurationProducer"/>
+                implementation="com.aridclown.intellij.defold.debugger.MobDebugConfigurationProducer"/>
     </extensions>
 
     <actions>
@@ -50,7 +50,7 @@
 
             <separator/>
             <action id="Defold.HotReload"
-                    class="com.aridclown.intellij.defold.actions.DefoldHotReloadAction"
+                    class="com.aridclown.intellij.defold.actions.HotReloadAction"
                     icon="AllIcons.Actions.Refresh"
                     text="Hot Reload"
                     description="Reload modified resources in running Defold game">
@@ -62,13 +62,13 @@
             <action id="BuildDefoldProject"
                     text="Build"
                     icon="AllIcons.Actions.Compile"
-                    class="com.aridclown.intellij.defold.actions.DefoldBuildProjectAction">
+                    class="com.aridclown.intellij.defold.actions.BuildProjectAction">
                 <keyboard-shortcut keymap="$default" first-keystroke="alt B" replace-all="true"/>
             </action>
             <action id="CleanBuildDefoldProject"
                     text="Clean Build"
                     icon="AllIcons.Actions.Rebuild"
-                    class="com.aridclown.intellij.defold.actions.DefoldCleanBuildProjectAction">
+                    class="com.aridclown.intellij.defold.actions.CleanBuildProjectAction">
                 <keyboard-shortcut keymap="$default" first-keystroke="alt shift B" replace-all="true"/>
             </action>
             <reference ref="Synchronize"/>
@@ -83,7 +83,7 @@
         <action id="Defold.OpenEditor"
                 text="Defold Editor"
                 popup="true"
-                icon="com.aridclown.intellij.defold.ui.DefoldIcons.defoldBlueIcon"
+                icon="com.aridclown.intellij.defold.util.DefoldIcons.defoldBlueIcon"
                 class="com.aridclown.intellij.defold.actions.OpenDefoldEditorAction">
             <add-to-group group-id="RevealGroup" anchor="first"/>
         </action>
