refactor code for improved readability and consistency

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <idea-plugin>
-    <name>Defold</name>
+    <name>Defold4IJ</name>
     <id>com.aridclown.IntelliJ-Defold</id>
     <vendor>Arid Clown</vendor>
     <description><![CDATA[
