--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           java-version: 21
 
       - name: Run Checks
-        run: ./gradlew buildPlugin
+        run: ./gradlew check --no-daemon
 
       - name: Upload Test Report
         uses: actions/upload-artifact@v5
@@ -34,8 +34,3 @@ jobs:
           name: junit-test-results
           path: '**/build/test-results/**/*.xml'
           retention-days: 1
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v5
-        with:
-          path: build/distributions/*.zip
